libqt6c/src/libqrunnable.hpp

#pragma once
#ifndef SRCC_LIBQRUNNABLE_HPP
#define SRCC_LIBQRUNNABLE_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QRunnable QRunnable;
#endif

QRunnable* QRunnable_new();
void QRunnable_Run(QRunnable* self);
QRunnable* QRunnable_Create(intptr_t functionToRun);
bool QRunnable_AutoDelete(const QRunnable* self);
void QRunnable_SetAutoDelete(QRunnable* self, bool autoDelete);
void QRunnable_OnRun(QRunnable* self, intptr_t slot);
void QRunnable_SuperRun(QRunnable* self);
void QRunnable_Delete(QRunnable* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif